# INE5420

./: .gitignore  README.md  example2.glade  pyproject.toml  transform_dialog.glade  window.glade
src/: clipping.py  colors.py  display_file.py  drawing.py  entities.py  log.py  main.py  main2.py  matrix.py  model.py  utils.py  viewport.py  window.py
src/ui/: transform_dialog.py  window.py
tests/: test_coordinates.py  test_viewport.py  util.py
